--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcuv2]
+monitor_speed = 115200
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.0
 	fastled/FastLED@^3.4.0
+
+[env:native]
+platform = native
